[package]
authors = ["Cyanism <github@cyan.slmail.me>"]
categories = ["external-ffi-bindings", "multimedia::audio"]
description = "A utility wrapper around the SoundTouch C++ audio library"
edition = "2021"
license = "LGPL-2.1"
keywords = ["soundtouch", "audio", "music", "audio-processing", "audio-library"]
name = "soundtouch"
readme = "README.md"
repository = "https://github.com/Cyanistic/soundtouch"
version = "0.4.3"

[dependencies.soundtouch-ffi]
version = "0.2.1"

[dependencies.libc]
version = "0.2"
default-features = false

[dev-dependencies.anyhow]
version = "1.0"

[dev-dependencies.hound]
version = "3.5"

[features]
default = ["alloc"]
alloc = []
